--- a/src/App.css
+++ b/src/App.css
@@ -177,3 +177,14 @@
   color: black;
   background-color: #3788da;
 }
+
+.carousel-img {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+}
+
+.container-carousel {
+  margin: 20px;
+  width: 50%;
+}
