--- a/src/App.css
+++ b/src/App.css
@@ -186,7 +186,7 @@
 .carousel-img {
   width: 95%;
   margin: 0px auto;
-  height: 300px;
+  height: 100%;
 }
 
 .carousel-control-next,
@@ -194,21 +194,27 @@
   /* filter: invert(100%); */
   background-color: rgb(202, 238, 238);
   width: 25px;
-  height: 300px;
+  border-radius: 4px;
 }
 .cards {
   display: grid;
-  height: 400px;
 }
 
-@media only screen and (min-width: 600px) and (max-width: 1023px) {
+@media only screen and (min-width: 400px) and (max-width: 800px) {
   .cards {
     grid-template-columns: 1fr 1fr;
   }
+
+  .carousel-img {
+    height: 100%;
+  }
 }
 
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 900px) {
   .cards {
     grid-template-columns: 1fr 1fr 1fr;
+  }
+  .carousel-img {
+    height: 100%;
   }
 }
