--- a/src/App.css
+++ b/src/App.css
@@ -8,11 +8,12 @@
   --p-color: hsl(0 0% 0% / 0.7);
   --linkedin-color: #0c66c3;
 }
-
-.App {
-  min-height: 200vh;
-  font-family: "Source Code Pro", sans-serif;
+body {
   background-color: var(--bg-color);
+}
+.App {
+  min-height: min-content;
+  font-family: "Source Code Pro", sans-serif;
 }
 
 .background {
@@ -191,30 +192,32 @@
 
 .carousel-control-next,
 .carousel-control-prev /*, .carousel-indicators */ {
-  /* filter: invert(100%); */
-  background-color: rgb(202, 238, 238);
+  filter: invert(100%);
   width: 25px;
   border-radius: 4px;
 }
 .cards {
   display: grid;
+  height: 300px;
 }
 
-@media only screen and (min-width: 400px) and (max-width: 800px) {
+@media only screen and (min-width: 400px) and (max-width: 899px) {
   .cards {
     grid-template-columns: 1fr 1fr;
+    height: 300px;
   }
 
   .carousel-img {
-    height: 100%;
+    height: 200px;
   }
 }
 
 @media only screen and (min-width: 900px) {
   .cards {
     grid-template-columns: 1fr 1fr 1fr;
+    height: 200px;
   }
   .carousel-img {
-    height: 100%;
+    height: 200px;
   }
 }
