--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   --border-color: rgb(217, 213, 213);
   --p-color: hsl(0 0% 0% / 0.7);
   --linkedin-color: #0c66c3;
-  --bg-color: #f2f2f2;
+  --bg-color: #fcfcfc;
 }
 body {
   background-color: var(--bg-color);
@@ -179,8 +179,12 @@ body {
 }
 
 .container-carousel {
-  margin: 20px auto;
+  margin: 20px auto 0px;
   width: 90%;
+  height: 200px;
+}
+.img {
+  object-fit: contain;
 }
 
 .carousel-img {
@@ -198,7 +202,7 @@ body {
 .cards {
   display: grid;
   overflow-y: scroll;
-  margin: 20px;
+  margin-bottom: 20px;
 }
 
 .cardContainer {
