--- a/src/App.css
+++ b/src/App.css
@@ -8,20 +8,20 @@
   --p-color: hsl(0 0% 0% / 0.7);
   --linkedin-color: #0c66c3;
   --bg-color: #fcfcfc;
-  --ease-hover: all 1s ease-in-out;
+  --ease-hover: all 0.5s ease-in-out;
 }
 body {
   background-color: var(--bg-color);
 }
 .App {
-  min-height: 100vh;
+  min-height: 200vh;
   font-family: "Source Code Pro", sans-serif;
 }
 
 .background {
   background-image: url("/public/images/pexels-negative-space-169573.jpg");
   width: 100%;
-  height: 340px;
+  height: 300px;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -127,12 +127,12 @@ body {
 .github {
   width: 25px;
   height: 25px;
-  color: black;
+  color: var(--linkedin-color);
   margin: 10px;
   transition: var(--ease-hover);
 }
 .github:hover {
-  color: var(--linkedin-color);
+  color: black;
   transform: scale(1.2);
 }
 .linkedin {
@@ -187,7 +187,7 @@ body {
   height: 200px;
 }
 .img {
-  object-fit: cover;
+  object-fit: scale-down;
   margin: 0;
   padding: 0;
 }
@@ -208,7 +208,7 @@ body {
   display: grid;
   overflow-y: scroll;
   margin: 0px 10px 20px;
-  height: 300px;
+  height: 600px;
 }
 
 .cards::-webkit-scrollbar {
@@ -231,7 +231,7 @@ body {
   margin: 20px;
   background-color: azure;
   border-radius: 20px;
-  transition: all 0.5s ease-in-out;
+  transition: var(--ease-hover);
 }
 
 .cardContainer:hover {
@@ -283,6 +283,23 @@ body {
   text-decoration: none;
   pointer-events: none;
   opacity: 0.5;
+}
+.footer {
+  background-color: #bbbbbb;
+  font-size: 15px;
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  height: 80px;
+  font-size: 12px;
+}
+
+.footer-container {
+  margin-top: 30px;
+}
+.copyright {
+  margin: 0;
+  padding: 0;
 }
 
 @media only screen and (max-width: 499px) {
